// Copyright 2018 The Exonum Team
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "helpers.proto";
import "blockchain.proto";
import "google/protobuf/timestamp.proto";

message Connect {
  string pub_addr = 1;
  google.protobuf.Timestamp time = 2;
  string user_agent = 3;
}


message Status {
  uint64 height = 1;
  Hash last_hash = 2;
}

message Propose {
  uint32 validator = 1;
  uint64 height = 2;
  uint32 round = 3;
  Hash prev_hash = 4;
  repeated Hash transactions = 5;
}

message Prevote {
  uint32 validator = 1;
  uint64 height = 2;
  uint32 round = 3;
  Hash propose_hash = 4;
  uint32 locked_round = 5;
}

message Precommit {
  uint32 validator = 1;
  uint64 height = 2;
  uint32 round = 3;
  Hash propose_hash = 4;
  Hash block_hash = 5;
  google.protobuf.Timestamp time = 6;
}

message BlockResponse {
  PublicKey to = 1;
  Block block = 2;
  repeated bytes precommits = 3;
  repeated Hash transactions = 4;
}

message TransactionsResponse {
  PublicKey to = 1;
  repeated bytes transactions = 2;
}

message ProposeRequest {
  PublicKey to = 1;
  uint64 height = 2;
  Hash propose_hash = 3;
}

message TransactionsRequest {
  PublicKey to = 1;
  repeated Hash txs = 2;
}

message PrevotesRequest {
  PublicKey to = 1;
  uint64 height = 2;
  uint32 round = 3;
  Hash propose_hash = 4;
  BitVec validators = 5;
}

message PeersRequest {
  PublicKey to = 1;
}

message BlockRequest {
  PublicKey to = 1;
  uint64 height = 2;
}

